--- a/src/Objects.module.css
+++ b/src/Objects.module.css
@@ -1,14 +1,13 @@
 .Images {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-
 }
 .Image {
     width: 100px;
-
     padding: 10px;
 }
